--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.0",
     "gatsby-plugin-postcss": "^5.1.0",
+    "lodash": "^4.17.21",
     "postcss": "^8.3.11",
     "tailwindcss": "^2.2.19"
   }
