--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@fontsource/homemade-apple": "^4.5.0",
+    "@fontsource/oswald": "^4.5.1",
     "@tailwindcss/typography": "^0.4.1",
     "gatsby": "^4.1.0",
     "gatsby-plugin-image": "^2.1.0",
