--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "gatsby-plugin-root-import": "^2.0.8",
     "lodash": "^4.17.21",
     "postcss": "^8.3.11",
-    "tailwindcss": "^2.2.19"
+    "prettier-plugin-tailwindcss": "^0.1.7",
+    "tailwindcss": "^3.0.23"
   }
 }
