--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   "dependencies": {
     "@fontsource/homemade-apple": "^4.5.0",
     "@fontsource/oswald": "^4.5.1",
-    "@tailwindcss/typography": "^0.4.1",
+    "@tailwindcss/typography": "^0.5.2",
+    "classnames": "^2.3.1",
     "gatsby": "^4.1.0",
     "gatsby-plugin-image": "^2.1.0",
     "gatsby-plugin-sharp": "^4.1.0",
@@ -32,6 +33,7 @@
     "gatsby-plugin-root-import": "^2.0.8",
     "lodash": "^4.17.21",
     "postcss": "^8.3.11",
+    "prettier": "^2.5.1",
     "prettier-plugin-tailwindcss": "^0.1.7",
     "tailwindcss": "^3.0.23"
   }
