--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "classnames": "^2.3.1",
     "gatsby": "^4.1.0",
     "gatsby-plugin-image": "^2.1.0",
+    "gatsby-plugin-netlify-cms": "^6.24.0",
     "gatsby-plugin-sharp": "^4.1.0",
     "gatsby-source-filesystem": "^4.1.0",
     "gatsby-transformer-sharp": "^4.1.0",
+    "netlify-cms-app": "^2.15.72",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   },
