new backend working in local

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "disquaire",
+  "name": "disquaire-frontend",
   "version": "1.0.0",
   "private": true,
   "description": "Disquaire",
