change config for accessing backend in prod

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 DISCOGS_KEY=yourKey
 DISCOGS_SECRET=yourSecret
 DISCOGS_USERNAME=yourDiscogsUsername
-CMS_URL=example.com
+CMS_HOSTNAME=example.com
 CMS_PORT=1337
+CMS_API_KEY=yourCMSApiKey
