--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@fontsource/oswald": "^4.5.1",
     "@tailwindcss/typography": "^0.5.2",
     "classnames": "^2.3.1",
+    "dompurify": "^2.4.0",
     "gatsby": "^4.1.0",
     "gatsby-plugin-image": "^2.1.0",
     "gatsby-plugin-netlify-cms": "^6.24.0",
@@ -27,7 +28,8 @@
     "gatsby-transformer-sharp": "^4.1.0",
     "netlify-cms-app": "^2.15.72",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "showdown": "^2.1.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.0",
